Adjust pre whitespace issue

--- a/client/ListMapper/list-mapper/src/resources/common/elements/markdown-parser.less
+++ b/client/ListMapper/list-mapper/src/resources/common/elements/markdown-parser.less
@@ -11,7 +11,7 @@
   }
 
   .markdown-parser-result {
-    width: 40vw;
+    width: 50vw;
     // float: right;
 
     pre {
